clusters/development/istio/istio-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: gateway-prod
  namespace: istio-system
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 443
      name: https
      protocol: HTTPS
    tls:
      mode: SIMPLE
      credentialName: portal-cert
    hosts:
    - "my.hmtest.de"
    - "domain.api.hmtest.de"
    - "pki.api.hmtest.de"
    - "eab.api.hmtest.de"
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: acme-gateway
  namespace: portal
spec:
  selector:
    istio: ingressgateway-secondary # use istio default ingress gateway
  servers:
  - port:
      number: 443
      name: https
      protocol: HTTPS
    tls:
      mode: PASSTHROUGH
    hosts:
    - acme.hmtest.de
