clusters/development/istio/istio-services.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: pki
  namespace: portal
spec:
  hosts:
  - pki.api.hmtest.de
  gateways:
  - istio-ingress/gateway-portal
  http:
  - route:
    - destination:
        host: pki-rest-interface
        port:
          number: 80
    corsPolicy:
      allowOrigins:
      - exact: https://my.hmtest.de
      - exact: http://localhost:3000
      allowMethods:
      - POST
      - GET
      - OPTIONS
      - DELETE
      allowCredentials: false
      allowHeaders:
      - Authorization
      - Content-Type
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: frontend
  namespace: portal
spec:
  hosts:
  - my.hmtest.de
  gateways:
  - istio-ingress/gateway-portal
  http:
  - route:
    - destination:
        host: frontend
        port:
          number: 80
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: domain
  namespace: portal
spec:
  hosts:
  - domain.api.hmtest.de
  gateways:
  - istio-ingress/gateway-portal
  http:
  - route:
    - destination:
        host: domain-rest-interface
        port:
          number: 80
    corsPolicy:
      allowOrigins:
      - exact: https://my.hmtest.de
      - exact: http://localhost:3000
      allowMethods:
      - POST
      - GET
      - OPTIONS
      - DELETE
      allowCredentials: false
      allowHeaders:
      - Authorization
      - Content-Type
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: eab
  namespace: portal
spec:
  hosts:
  - eab.api.hmtest.de
  gateways:
  - istio-ingress/gateway-portal
  http:
  - route:
    - destination:
        host: eab-rest-interface
        port:
          number: 80
    corsPolicy:
      allowOrigins:
      - exact: https://my.hmtest.de
      - exact: http://localhost:3000
      allowMethods:
      - POST
      - GET
      - OPTIONS
      - DELETE
      allowCredentials: false
      allowHeaders:
      - Authorization
      - Content-Type
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: acme
  namespace: portal
spec:
  hosts:
  - acme.hmtest.de
  gateways:
  - istio-ingress/gateway-portal
  tls:
  - match:
    - port: 443
      sniHosts:
      - acme.hmtest.de
    route:
    - destination:
        host: certificates
        port:
          number: 443
